{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 450,
  "lineage": "c084f914-89a8-e052-3fe3-c8092dda1674",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094b960b1603aaef6",
            "arn": "arn:aws:ec2:us-east-1:584996267165:elastic-ip/eipalloc-094b960b1603aaef6",
            "association_id": "eipassoc-047e594881c5d199b",
            "domain": "vpc",
            "id": "eipalloc-094b960b1603aaef6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02dee186bccef5f3c",
            "private_dns": "ip-10-0-1-234.ec2.internal",
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-34-235-216-202.compute-1.amazonaws.com",
            "public_ip": "34.235.216.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fargate-forge-nat-eip-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-nat-eip-1",
              "Project": "fargate-forge"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078f15dd6d44a5a18",
            "arn": "arn:aws:ec2:us-east-1:584996267165:elastic-ip/eipalloc-078f15dd6d44a5a18",
            "association_id": "eipassoc-0bc0ac9b676372426",
            "domain": "vpc",
            "id": "eipalloc-078f15dd6d44a5a18",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07083a85248e7a60b",
            "private_dns": "ip-10-0-2-9.ec2.internal",
            "private_ip": "10.0.2.9",
            "public_dns": "ec2-18-233-234-248.compute-1.amazonaws.com",
            "public_ip": "18.233.234.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fargate-forge-nat-eip-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-nat-eip-2",
              "Project": "fargate-forge"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:internet-gateway/igw-0b254b5e9a8c6fc26",
            "id": "igw-0b254b5e9a8c6fc26",
            "owner_id": "584996267165",
            "tags": {
              "Name": "fargate-forge-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-igw",
              "Project": "fargate-forge"
            },
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:584996267165:loadbalancer/app/fargate-forge-alb/25fe0a4e6b7471db",
            "arn_suffix": "app/fargate-forge-alb/25fe0a4e6b7471db",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fargate-forge-alb-1548131614.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:584996267165:loadbalancer/app/fargate-forge-alb/25fe0a4e6b7471db",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fargate-forge-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de98067c80e043a8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05e40511c7454288f"
              },
              {
                "subnet_id": "subnet-0ea55e53ecd18ba63"
              }
            ],
            "subnets": [
              "subnet-05e40511c7454288f",
              "subnet-0ea55e53ecd18ba63"
            ],
            "tags": {
              "Name": "fargate-forge-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-alb",
              "Project": "fargate-forge"
            },
            "vpc_id": "vpc-0b43137ae5976c149",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:584996267165:listener/app/fargate-forge-alb/25fe0a4e6b7471db/6110449c2766e6f7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:584996267165:targetgroup/fargate-forge-tg-blue/4f0eae4895367eed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:584996267165:listener/app/fargate-forge-alb/25fe0a4e6b7471db/6110449c2766e6f7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:584996267165:loadbalancer/app/fargate-forge-alb/25fe0a4e6b7471db",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "fargate-forge-listener-http"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-listener-http",
              "Project": "fargate-forge"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.blue",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:584996267165:targetgroup/fargate-forge-tg-blue/4f0eae4895367eed",
            "arn_suffix": "targetgroup/fargate-forge-tg-blue/4f0eae4895367eed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:584996267165:targetgroup/fargate-forge-tg-blue/4f0eae4895367eed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fargate-forge-tg-blue",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "fargate-forge-tg-blue"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-tg-blue",
              "Project": "fargate-forge"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:584996267165:targetgroup/fargate-forge-tg-green/c4c4472aabb390c2",
            "arn_suffix": "targetgroup/fargate-forge-tg-green/c4c4472aabb390c2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:584996267165:targetgroup/fargate-forge-tg-green/c4c4472aabb390c2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:584996267165:loadbalancer/app/fargate-forge-alb/25fe0a4e6b7471db"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fargate-forge-tg-green",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "fargate-forge-tg-green"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-tg-green",
              "Project": "fargate-forge"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094b960b1603aaef6",
            "association_id": "eipassoc-047e594881c5d199b",
            "connectivity_type": "public",
            "id": "nat-0672c8642dc0c9da0",
            "network_interface_id": "eni-02dee186bccef5f3c",
            "private_ip": "10.0.1.234",
            "public_ip": "34.235.216.202",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ea55e53ecd18ba63",
            "tags": {
              "Name": "fargate-forge-nat-us-east-1a"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-nat-us-east-1a",
              "Project": "fargate-forge"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078f15dd6d44a5a18",
            "association_id": "eipassoc-0bc0ac9b676372426",
            "connectivity_type": "public",
            "id": "nat-04b7b50086f2f55f8",
            "network_interface_id": "eni-07083a85248e7a60b",
            "private_ip": "10.0.2.9",
            "public_ip": "18.233.234.248",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05e40511c7454288f",
            "tags": {
              "Name": "fargate-forge-nat-us-east-1b"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-nat-us-east-1b",
              "Project": "fargate-forge"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:route-table/rtb-0d0c01ac2ac2c9aa3",
            "id": "rtb-0d0c01ac2ac2c9aa3",
            "owner_id": "584996267165",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0672c8642dc0c9da0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fargate-forge-private-rt-us-east-1a"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-private-rt-us-east-1a",
              "Project": "fargate-forge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:route-table/rtb-01d8ee100eeb145c2",
            "id": "rtb-01d8ee100eeb145c2",
            "owner_id": "584996267165",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b7b50086f2f55f8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fargate-forge-private-rt-us-east-1b"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-private-rt-us-east-1b",
              "Project": "fargate-forge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:route-table/rtb-0516117903a1da673",
            "id": "rtb-0516117903a1da673",
            "owner_id": "584996267165",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b254b5e9a8c6fc26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fargate-forge-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-public-rt",
              "Project": "fargate-forge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0351c43a097526b32",
            "route_table_id": "rtb-0d0c01ac2ac2c9aa3",
            "subnet_id": "subnet-00791b45a95928cfa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9c134e6efce89f1",
            "route_table_id": "rtb-01d8ee100eeb145c2",
            "subnet_id": "subnet-0b75c469452538342"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076c0e7c97ab23d3a",
            "route_table_id": "rtb-0516117903a1da673",
            "subnet_id": "subnet-0ea55e53ecd18ba63"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6192e2bbe830704",
            "route_table_id": "rtb-0516117903a1da673",
            "subnet_id": "subnet-05e40511c7454288f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:security-group/sg-0de98067c80e043a8",
            "description": "Security group for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de98067c80e043a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "fargate-forge-alb-20260412164427897000000004",
            "name_prefix": "fargate-forge-alb-",
            "owner_id": "584996267165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fargate-forge-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-alb-sg",
              "Project": "fargate-forge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:security-group/sg-0256dd50bd500d13c",
            "description": "Security group for ECS tasks - only accepts traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0256dd50bd500d13c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de98067c80e043a8"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "fargate-forge-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "584996267165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fargate-forge-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-ecs-tasks-sg",
              "Project": "fargate-forge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:subnet/subnet-00791b45a95928cfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00791b45a95928cfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584996267165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-forge-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-private-us-east-1a",
              "Project": "fargate-forge"
            },
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:subnet/subnet-0b75c469452538342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b75c469452538342",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584996267165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-forge-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-private-us-east-1b",
              "Project": "fargate-forge"
            },
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:subnet/subnet-0ea55e53ecd18ba63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea55e53ecd18ba63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "584996267165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-forge-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-public-us-east-1a",
              "Project": "fargate-forge"
            },
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:subnet/subnet-05e40511c7454288f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e40511c7454288f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "584996267165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-forge-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-public-us-east-1b",
              "Project": "fargate-forge"
            },
            "vpc_id": "vpc-0b43137ae5976c149"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584996267165:vpc/vpc-0b43137ae5976c149",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1f896db54ee2d3e",
            "default_route_table_id": "rtb-08154aabd78cdb5ba",
            "default_security_group_id": "sg-0f85c0d4c7aa19383",
            "dhcp_options_id": "dopt-0a5d82d0086914d0d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b43137ae5976c149",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08154aabd78cdb5ba",
            "owner_id": "584996267165",
            "tags": {
              "Name": "fargate-forge-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "fargate-forge-vpc",
              "Project": "fargate-forge"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}